# wt-manage

./: pyproject.toml
src/worktree_manager/: .env  .env.example  config.py  main.py
src/worktree_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/worktree_manager/commands/: create.py  list.py  remove.py
src/worktree_manager/services/: ai_service.py  git_service.py  process_service.py
