[build-system]
requires = ["setuptools>=61.0"]

[project]
name = "worktree-manager"
version = "0.1.0"
description = "Git worktree management CLI with AI-powered automation"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
wt-create = "worktree_manager.main:create_command"
wt-remove = "worktree_manager.main:remove_command"
wt-list = "worktree_manager.main:list_command"